<resources>
    <string name="app_name">TIWO</string>
    <string name="main_tutorial_status">com.faesfa.tiwo.TUTORIAL_COMPLETED</string>
    <string name="preset_tutorial_status">com.faesfa.tiwo.PRESET_TUTORIAL_COMPLETED</string>
    <string name="sound_vibration_setting">com.faesfa.tiwo.PREFERENCE_SOUND_VIBRATION</string>
    <string name="last_db_saved" translatable="false">com.faesfa.tiwo.LAST_SAVED_DB</string>

    <!-- Strings Used in General -->
    <string name="startBtnTxt">START</string>
    <string name="startBtnDescription">Start Workout Button</string>

    <!-- Strings Used on Home Screen -->
    <string name="newBtnDescription">New workouts</string>
    <string name="createBtnDescription">Create new workout</string>
    <string name="createBtnTxt">Create Workout</string>
    <string name="createPresetBtnTxt">Preset Workout</string>
    <string name="quickBtnDescription">Start Quick workout</string>
    <string name="quickBtnTxt">Quick Workout</string>
    <string name="mainHomeTitle">My Workouts</string>
    <string name="mainPresetsTitle">Presets</string>
    <string name="backToExitApp">Press Back Again to Exit</string>
    <string name="notFoundWorkoutsTxt">No saved workouts found</string>

    <!-- Strings Used on Item View -->
    <string name="itemNameField">WORKOUT NAME</string>
    <string name="itemSetsTxt">Sets:</string>
    <string name="itemRepsTxt">Reps:</string>
    <string name="itemWorkTxt">Work:</string>
    <string name="itemValueZero">0</string>
    <string name="itemDurationTxt">Duration</string>
    <string name="itemDurValue">00:00</string>
    <string name="itemClockImgDescription">Clock Image Duration</string>

    <!-- Strings Used on Details/Info Screen -->
    <string name="infoWorkoutNameTitle">WORKOUT NAME</string>
    <string name="infoNumValueDefault">0</string>
    <string name="infoNumSetsTitle">Sets</string>
    <string name="infoNumRepsTitle">Reps</string>
    <string name="infoWorkingWithReps">Repetitions</string>
    <string name="infoWorkingWithTime">Time</string>
    <string name="infoNumRepsIntervalTitle">Repetition intervals</string>
    <string name="infoIntervalSecs">Seconds</string>
    <string name="infoWorkTimeTitle">Work Time</string>
    <string name="infoRestTimeTitle">Rest time</string>
    <string name="infoDeleteBtnTxt">DELETE</string>
    <string name="infoDeleteBtnDescription">Delete Workout Button</string>


    <!-- Strings Used in Quick and Create workout -->
    <string name="workoutMode">Working mode</string>
    <string name="workoutModeTime">Time</string>
    <string name="workoutModeReps">Reps</string>
    <string name="workoutNumSets">Number of Sets</string>
    <string name="workoutNumSetsValueDefault">3</string>
    <string name="workoutNumReps">Number of Reps</string>
    <string name="workoutNumRepsValueDefault">10</string>
    <string name="workoutRepsInterval">Reps Interval</string>
    <string name="workoutIntervalValueDefault">1.5</string>
    <string name="workoutIntervalSecs">Seconds</string>
    <string name="workoutRestTime">Rest time</string>
    <string name="workoutWorkTime">Work time</string>
    <string name="workoutDotsDivider">:</string>
    <string name="addSetsBtnDescription">Add sets</string>
    <string name="removeSetsBtnDescription">Remove sets</string>
    <string name="addRepsBtnDescription">Add repetition</string>
    <string name="removeRepsBtnDescription">Remove repetition</string>
    <string name="addIntervalBtnDescription">Add repetition interval seconds</string>
    <string name="removeIntervalBtnDescription">Remove repetition interval seconds</string>

    <!-- Strings Used on Create Workout Screen -->
    <string name="createActionBar">Create Workout</string>
    <string name="createActionBarHelpDescription">Help creating workout</string>
    <string name="createWorkoutName">Workout name</string>
    <string name="createWorkoutNextBtn">NEXT</string>
    <string name="createWorkoutNextBtnDescription">Next Button</string>
    <string name="createWorkoutDetails">Workout Details</string>
    <string name="createWorkoutDetailsName">Name:</string>
    <string name="createWorkoutDetailsSets">Sets:</string>
    <string name="createWorkoutDetailsReps">Reps:</string>
    <string name="createWorkoutDetailsInterval">Reps interval:</string>
    <string name="createWorkoutDetailsWorkMode">Working mode:</string>
    <string name="createWorkoutDetailsWorkTime">Work time:</string>
    <string name="createWorkoutDetailsRestTime">Rest time:</string>
    <string name="createWorkoutDetailsDefault">N/A</string>
    <string name="createSaveBtnDescription">Save workout</string>
    <string name="createSaveBtnTxt">SAVE</string>
    <string name="createStartSaveBtnDescription">Start and save workout</string>
    <string name="createStartSaveBtnTxt">START &amp; SAVE</string>
    <!-- Strings Used on Workout Category -->
    <string name="pickCategoryTitle">Pick a Muscle Category</string>
    <string name="backCategoryDescription">Back muscles category</string>
    <string name="chestCategoryDescription">Chest muscles category</string>
    <string name="shoulderCategoryDescription">Shoulder muscles category</string>
    <string name="armsCategoryDescription">Arms muscles category</string>
    <string name="legsCategoryDescription">Legs muscles category</string>
    <string name="absCategoryDescription">Abs muscles category</string>
    <string name="backCategoryTxt">Back</string>
    <string name="chestCategoryTxt">Chest</string>
    <string name="shoulderCategoryTxt">Shoulder</string>
    <string name="armsCategoryTxt">Arms</string>
    <string name="legsCategoryTxt">Legs</string>
    <string name="absCategoryTxt">Abs</string>


    <string name="workingReps">Reps:</string>
    <string name="workingTime">Work:</string>

    <!-- Strings Used on Timer Screen -->
    <string name="getReady">Get Ready!</string>
    <string name="starting">Starting in…</string>
    <string name="timerDefaultNumber">00</string>
    <string name="timerVerticalMinutes">MINUTES</string>
    <string name="timerVerticalSeconds">SECONDS</string>
    <string name="timerVerticalReps">REPETITIONS</string>
    <string name="timerComingUp">COMING UP NEXT:</string>
    <string name="timerComingUpDefault">N/A</string>
    <string name="timerStartingDefaultValue">3</string>
    <string name="timerStartingFinalValue">GO</string>
    <string name="backToExitTimer">Press Back Again to Exit</string>
    <string name="doubleTapPause">Double Tap Pause/UnPause</string>
    <string name="doubleTapSkip">Double Tap to Skip</string>
    <string name="doubleTapReturn">Double Tap to Return</string>
    <string name="setsTimer">CURRENT SET: </string>
    <string name="restTimer">Rest:</string>
    <string name="workTimer">Work:</string>
    <string name="workingTimeTimer">WORK TIME</string>
    <string name="workingRepsTimer">REPS</string>
    <string name="restingTimeTimer">REST TIME</string>
    <string name="end">End</string>
    <string name="paused">PAUSED</string>
    <string name="timerPausedBtnDescription">Timer paused button to resume</string>
    <string name="timerPausedBtnTxt">Double Tap to Resume</string>
    <string name="timerWorkTxt">WORK</string>
    <string name="timerRestTxt">REST</string>
    <string name="timerSkipBtnDescription">Skip timer button</string>
    <string name="timerPreviousBtnDescription">Return previous timer button</string>
    <string name="pauseLayoutDescription">Double Tap to pause</string>
    <string name="soundBtnDescription">Button to enable or disable sound</string>
    <string name="vibrationBtnDescription">Button to enable or disable vibration</string>
    <string name="completedWorkoutText">WORKOUT COMPLETED!!!</string>
    <string name="continueTxtTimer">Click to continue…</string>

    <!-- Strings Used for Sound names -->
    <string name="upSound">up</string>
    <string name="downSound">down</string>
    <string name="oneSound">one</string>
    <string name="twoSound">two</string>

    <!-- Strings Used in presets details screen -->
    <string name="presetImageDescription">Preset workout example image</string>
    <string name="categoryLbl">Category:</string>
    <string name="workingModePreset">Working Mode</string>

    <!-- Strings Used in presets screen -->
    <string name="searchByWorkoutOrCategory">Search for Workout or pick Category</string>
    <string name="upperArmsCategoryTxt">Upper Arms</string>
    <string name="lowerArmsCategoryTxt">Lower Arms</string>
    <string name="upperLegsCategoryTxt">Upper Legs</string>
    <string name="lowerLegsCategoryTxt">Lower Legs</string>
    <string name="cardioCategoryTxt">Cardio</string>
    <string name="categoryNeckTxt">Neck</string>
    <string name="targetLbl">Target:</string>
    <string name="equipmentLbl">Equipment:</string>
    <string name="quickTimerLbl">Quick Timer</string>
    <string name="logoDescription">Tiwo workout timer Logo Image</string>
    <string name="presetNotFoundTxt">Workout not found</string>

    <!-- Strings Used in Toasts -->
    <string name="repsCheckErrorToast">Number of Reps Can\'t be 0</string>
    <string name="intervalCheckErrorToast">Interval Time Can\'t be 0</string>
    <string name="restTimeCheckErrorToast">Rest Time Can\'t be 0:0</string>
    <string name="setsCheckErrorToast">Number of Sets Can\'t be 0</string>
    <string name="workTimeCheckErrorToast">Work Time Can\'t be 0:0</string>
    <string name="workoutDeleteConfirmToast">Workout Deleted</string>
    <string name="workoutDeleteErrorToast">Error Deleting Workout</string>
    <string name="savedConfirmToast">Saved Correctly</string>
    <string name="errorConnectingToApiToast">Error Connecting to Internet</string>
    <string name="nameCheckErrorToast">Name Can\'t be empty</string>
    <string name="categoryCheckErrorToast">Pick a category</string>
</resources>