<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AB181818"
            android:clickable="true"
            android:elevation="16dp"
            android:focusable="true">

            <TextView
                android:id="@+id/startTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shape"
                android:maxWidth="300dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="Te vamos a dar un recorrido corto para que entiendas como usar nuestra app, veras que es muy sencilla de usar y todo es de facil acceso. Toca la pantalla para continuar"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/continueTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:padding="10dp"
                android:text="Toca para continuar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tutorialStepPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:background="@drawable/rounded_shape"
                android:maxWidth="300dp"
                android:padding="10dp"
                android:text="Aqui podras encontrar todos los ejercicios que personalizaste y guardaste"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/topArrowRight"
                android:alpha="0"
                android:src="@drawable/baseline_arrow_drop_up_24"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/tutorialStepPager"
                app:layout_constraintEnd_toEndOf="@+id/tutorialStepPager"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="-17dp"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/topArrowLeft"
                android:alpha="0"
                android:src="@drawable/baseline_arrow_drop_up_24"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/tutorialStepPager"
                app:layout_constraintStart_toStartOf="@+id/tutorialStepPager"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="-17dp"/>

            <TextView
                android:id="@+id/tutorialStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/rounded_shape"
                android:padding="10dp"
                android:alpha="0"
                android:text="Aqui podras iniciar, seleccionar o crear tus propios ejercicios"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/bottomArrow"
                android:alpha="0"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="@+id/tutorialStep"
                app:layout_constraintTop_toBottomOf="@+id/tutorialStep"
                android:layout_marginTop="-17dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvWorkouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            tools:ignore="contentDescription"
            android:layout_marginTop="100dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/empty_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/notFoundWorkoutsTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWorkouts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/mainBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/floating_btn_shape"
        android:clickable="true"
        android:contentDescription="@string/newBtnDescription"
        android:elevation="15dp"
        android:focusable="true"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/rvWorkouts"
        app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/createPresetBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/createBtnDescription"
            android:elevation="13dp"
            android:fadingEdgeLength="1dp"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/mainBtn"
            app:layout_constraintEnd_toEndOf="@+id/mainBtn"
            app:layout_constraintTop_toTopOf="@+id/mainBtn"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:visibility="visible">

            <TextView
                android:id="@+id/createPresetTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-18dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:elevation="2dp"
                android:fadingEdgeLength="100dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:text="@string/createPresetBtnTxt"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/floating_btn_shape"
                android:contentDescription="@string/createBtnDescription"
                android:elevation="3dp"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@drawable/baseline_post_add_24" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:contentDescription="@string/createBtnDescription"
            android:elevation="11dp"
            android:fadingEdgeLength="1dp"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/mainBtn"
            app:layout_constraintEnd_toEndOf="@+id/mainBtn"
            app:layout_constraintTop_toTopOf="@+id/mainBtn"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:visibility="visible">

            <TextView
                android:id="@+id/createTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-18dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#FFFFFF"
                android:elevation="2dp"
                android:fadingEdgeLength="100dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:text="@string/createBtnTxt"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/floating_btn_shape"
                android:contentDescription="@string/createBtnDescription"
                android:elevation="3dp"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@drawable/baseline_save_as_24" />


        </LinearLayout>

        <LinearLayout
        android:id="@+id/quickBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:contentDescription="@string/quickBtnDescription"
        android:elevation="9dp"
        android:fadingEdgeLength="10dp"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/mainBtn"
        app:layout_constraintTop_toTopOf="@+id/mainBtn"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:visibility="visible">

        <TextView
            android:id="@+id/quickTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-18dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="#FFFFFF"
            android:elevation="2dp"
            android:fadingEdgeLength="100dp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:text="@string/quickBtnTxt"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/floating_btn_shape"
            android:contentDescription="@string/quickBtnDescription"
            android:elevation="3dp"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/baseline_bolt_24" />

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>